--- a/index.html
+++ b/index.html
@@ -6,51 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
+  <body class="studio">
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./index.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+        <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
+        <ul class="nav-list">
+          <li><a class="nav-link" href="./index.html">Студія</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="nav-link" href="./index.html">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="nav-contacts">
+        <li><a class="nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="nav-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-button" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Переваги</h2>
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <section class="benefits">
+        <h2 class="benefits-title title" hidden>Переваги</h2>
+        <ul class="benefits-list">
+          <li class="benefits-item">
+            <h3 class="benefits-name title">Увага до деталей</h3>
+            <p class="benefits-description">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="benefits-item">
+            <h3 class="benefits-name title">Пунктуальність</h3>
+            <p class="benefits-description">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="benefits-item">
+            <h3 class="benefits-name title">Планування</h3>
+            <p class="benefits-description">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="benefits-item">
+            <h3 class="benefits-name title">Сучасні технології</h3>
+            <p class="benefits-description">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="doing">
+        <h2 class="doing-title title">Чим ми займаємося</h2>
+        <ul class="doing-list">
           <li>
             <img src="images/doing1-min.jpg" alt="верстка на десктоп" width="370" />
           </li>
@@ -62,46 +77,49 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-member">
             <img src="images/IgorDemianenko-min.jpg" alt="Igor Demianenko" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name title">Ігор Дем'яненко</h3>
+            <p class="team-position" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img src="images/OlgaRepina-min.jpg" alt="Olga Repina" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name title">Ольга Рєпіна</h3>
+            <p class="team-position" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img src="images/MykolaTarasov-min.jpg" alt="Mykola Tarasov" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-name title">Микола Тарасов</h3>
+            <p class="team-position" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-member">
             <img src="images/MykhayloYermakov-min.jpg" alt="Mykhaylo Yermakov" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name title">Михайло Єрмаков</h3>
+            <p class="team-position" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="address-list">
           <li>
             <a
+              class="address-geo"
               href="https://goo.gl/maps/euFr5WPg1i95ohYT8"
               target="_blank"
               rel="noopener noreferrer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="address-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a class="address-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
