mentors corrections and added active links styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="nav-list">
           <li><a class="nav-link" href="./index.html">Студія</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="nav-link active-link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="nav-link" href="./index.html">Контакти</a></li>
         </ul>
       </nav>
