--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="nav-list">
-          <li><a class="nav-link" href="./index.html">Студія</a></li>
+          <li><a class="nav-link active-link" href="./index.html">Студія</a></li>
           <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="nav-link" href="./index.html">Контакти</a></li>
         </ul>
