minor correction (closing tag name)

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
           <li class="works-item">
             <img src="./images/technopig-min.jpg" alt="Технокряк" width="370" />
             <h2 class="works-name title">Технокряк</h2>
-            <p class="works-type">Веб-сайт</pclass>
+            <p class="works-type">Веб-сайт</p>
           </li>
           <li class="works-item">
             <img
